# shared-mobility-fleet-system

./: .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml  deploy-cloudrun.yml  main.yml
docs/: DECISIONS.md  FOLDER_STRUCTURE.md  WORKFLOW_SUMMARY.md  WORKFLOW_and_GUIDELINES.md
src/: bootstrap.py  main.py
src/api/: __init__.py  bootstrap.py  dependencies.py  exceptions_handler.py  router.py
src/api/routes/: health.py  rides.py  stations.py  (+2 more)
src/data/: loaders.py  persistence.py  state_serializer.py
src/domain/: Vehicle.py  VehicleContainer.py  enums.py  exceptions.py  ride.py  user.py
src/services/: active_rides.py  billing.py  fleet_manager.py
tests/: conftest.py  test_Vehicle.py  test_bootstrap.py  test_e2e.py  test_enums.py  test_health.py  test_kan29_dataloader_base.py  test_loaders.py  test_smoke.py
tests/api/: register.py  test_api_e2e.py  test_error_mapping.py  test_health.py  test_register.py  test_ride_end.py  test_ride_start.py  test_rides_active_users.py  test_stations_nearest.py  test_validation_return_400.py  test_vehicles_degraded.py  test_vehicles_treat.py
tests/data/: test_dataloader_column_validation.py  test_kan29_dataloader_base.py  test_kan30_station_loader.py  test_kan31_vehicle_loader.py  test_loaders.py  test_persistence.py  test_state_serializer.py  test_station_loader.py  test_vehicle_loader.py
tests/domain/: test_Vehicle.py  test_VehicleContainter.py  test_ride.py  test_user.py  test_vehicle.py  test_vehicle_container.py
tests/services/: test_active_rides.py  test_fleet_manager.py
(+5 files in other folders)
